# float

./: .gitignore  CLAUDE.md  README.md  float.code-workspace
.claude/skills/idf-tmux-skill/: SKILL.md
.serena/: project.yml
.serena/memories/: development_workflow.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
float_components/float_blink/: CMakeLists.txt  float_blink.c  idf_component.yml
float_components/float_data/: CMakeLists.txt  float_data.c
float_components/float_node_list/: CMakeLists.txt  float_node_list.c  idf_component.yml
float_components/float_now/: CMakeLists.txt  float_now.c  float_now_private.h
float_components/float_registry/: CMakeLists.txt  float_registry.c
float_components/float_sensor/: CMakeLists.txt  float_sensor.c
float_components/float_sensor_aht30/: CMakeLists.txt  float_sensor_aht30.c
float_components/float_sensor_bmp280/: CMakeLists.txt  float_sensor_bmp280.c
float_components/float_sensor_class/: CMakeLists.txt  float_sensor_class.c
float_components/float_sensor_mock/: CMakeLists.txt  float_sensor_mock.c
float_core/: CMakeLists.txt  sdkconfig.defaults
float_core/main/: CMakeLists.txt  Kconfig.projbuild  cmd_system.h  cmd_system_common.c  float_core.c
float_node/: .clangd  CMakeLists.txt  sdkconfig.defaults
float_node/main/: CMakeLists.txt  Kconfig.projbuild  float_node.c
float_test/: CMakeLists.txt  sdkconfig.defaults
float_test/main/: CMakeLists.txt
float_zigbee/: CMakeLists.txt
float_zigbee/main/: CMakeLists.txt
iteration/: plan.md  research.md  spec.md
(+39 files in other folders)
